Make HtmlView white in dark mode, as its internal colors are currently not dependent on mode Fix PickerField modal in dark mode Fix SegmentedBar selection colors (it doesn't support changing the color in selected state) Update CHANGELOG Update README Up the version

--- a/src/scss/mixins/components/_controls.scss
+++ b/src/scss/mixins/components/_controls.scss
@@ -102,12 +102,11 @@
         @include colorize(
             $color: primary,
             $background-color: background,
-            $selected-background-color: accent
+            $contrasted-selected-background-color: accent background -20%
         );
 
         .ns-ios & {
             margin: 0 15;
-            @include colorize($color: accent);
         }
     }
 }
